--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </div>
 
     <div class="homebar">
-            <ul>
+         <ul>
             <li>Home</li>
             <li>Contact us</li>
-            <li>Rate Us</li>
-        </ul>
+            <li>Rate us</li>
+         </ul>
     </div>
     <div class="container">
         <div class="box box1">Lorem ipsum dolor sit amet consectetur 
