--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div class="homebar">
          <ul>
-            <li>Home</li>
-            <li>Contact us</li>
-            <li>Rate us</li>
+            <li class="li">Home</li>
+            <li class="li">Contact us</li>
+            <li class="li">Rate us</li>
          </ul>
     </div>
     <div class="container">
